--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lodash.get": "^4.4.2",
     "moment": "^2.18.1",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "valence": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
