--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/SmarterServices/d2l-client#readme",
   "dependencies": {
     "joi": "^11.1.1",
-    "lodash.get": "^4.4.2",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
